# TemplateTool

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  LICENSE  README.md  build.bat  build.sh  build_project_gcc.sh  build_project_msvc.bat  generate_project_gcc.sh  generate_project_msvc.bat  macosx_intel_generate_cmake_qt_gcc.sh  push_release.bat  push_release.sh  run_cmake_qt_vs_x64.bat  test_sample.json  win_x64_build_cmake_qt_vs.bat  win_x64_generate_cmake_qt_vs.bat
product/: CMakeLists.txt
product/CMakeScripts/: BuildInstallModule.cmake  BuildInterface.cmake  BuildModule.cmake  BuildQtModule.cmake  LinkTargetIncludeDirectories.cmake
product/CMakeScripts/BuildModule/: BuildBundlePListModule.cmake  BuildCPackModule.cmake  BuildInstallModule.cmake  BuildInterface.cmake  BuildLinuxCPackModule.cmake  BuildLinuxDesktopModule.cmake  BuildModule.cmake  BuildQtModule.cmake  BuildRCFileModule.cmake  BuildServiceModule.cmake  BuildUCFServiceModule.cmake  BuildUnitTestModule.cmake  GenerateAppVersion.cmake  LinkTargetIncludeDirectories.cmake  SetIDEFolder.cmake
product/CMakeScripts/FindModule/: FindDOTEST.cmake
product/CMakeScripts/UtilModule/: CapitalizeString.cmake  DetectPlatform.cmake  GenerateVersion.cmake  GitUtils.cmake  TargetBuildType.cmake  TemplateTools.cmake  ValidateAssetTokens.cmake  ValidateColorTokens.cmake  ValidateFontTokens.cmake
product/CMakeScripts/VersionModule/: GenerateAppInfoFiles.cmake  GenerateAppRCFiles.cmake  GenerateAppVersionHeader.cmake  GenerateAppVersionMeta.cmake  GenerateGitInfoMeta.cmake  GitUtils.cmake
product/application/: CMakeLists.txt
product/application/AppRunner/: CMakeLists.txt
product/application/AppRunner/src/: AppRunner.cpp  LoggerDefine.h
product/application/main/: CMakeLists.txt  appVersion.rc.in  logo.icns  main.cpp
product/application/main/cmake/: post_install_copy_dylibs.cmake  post_install_linux.cmake  post_install_macosx.cmake  post_install_windows.cmake
product/application/qt/: CMakeLists.txt
product/application/qt/AppContext/: CMakeLists.txt
product/application/qt/ClientGlobal/: CMakeLists.txt
product/application/qt/ServiceSignalEmitter/: ServiceSignalEmitter.h  ServiceSignalEmitterExport.h
product/application/qt/UIAuxiliary/: CMakeLists.txt
product/application/qt/UIComponent/: CMakeLists.txt
product/application/qt/UICore/: CMakeLists.txt
product/application/qt/UITranslation/: CMakeLists.txt
product/application/qt/UIView/: CMakeLists.txt
product/application/qt/UIViews/: CMakeLists.txt
product/application/qt/main/: CMakeLists.txt  main.cpp
product/application/qt/mainUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.qml
product/application/rescources/translations/: UIVIEW_translations_en.ts  UIVIEW_translations_zh-CN.ts
product/application/resources/translations/: app_translations_en.ts  app_translations_zh-CN.ts
product/application/updater/: CMakeLists.txt  README.md  main.cpp
product/application/updater/config/: UpdaterConfig.cpp  UpdaterConfig.h
product/application/updater/core/: UpdaterLog.h  UpgradeExecutor.cpp  UpgradeExecutor.h
product/application/updater/platform/: PlatformUtils.h  PlatformUtils_unix.cpp  PlatformUtils_win.cpp
product/apprunner/: CMakeLists.txt
product/apprunner/AppRunner/: CMakeLists.txt
product/apprunner/AppRunner/src/: AppRunner.cpp  LoggerDefine.h
product/bundle_pack/: CMakeLists.txt  cpack_linux_pre_build.cmake  cpack_pre_build.cmake  release-config.json
product/bundle_pack/scripts/: generate_upgrade_manifest.py
product/bundle_pack/templates/: cpack_linux_config.cmake.in  cpack_macos_config.cmake.in  cpack_windows_config.cmake.in  package-info.json.in
product/codegen/template_render/: render_template.py  requirements.txt
product/codegen/template_render/render/: __init__.py  renderer.py
product/commonHead/: CMakeLists.txt
product/commonHead/commonHead/: CMakeLists.txt
product/commonHead/commonHead/commonHeadFramework/: CMakeLists.txt
product/commonHead/commonHead/commonHeadManager/: CMakeLists.txt
product/commonHead/commonHead/commonHeadUtils/: CMakeLists.txt
product/commonHead/unit_test/catch2_tests/: CMakeLists.txt  CommonHeadFramework_tests.cpp
product/commonhead/: CMakeLists.txt
product/commonhead/commonHead/: CMakeLists.txt
product/commonhead/commonHead/commonHeadFramework/: CMakeLists.txt
product/commonhead/commonHead/commonHeadManager/: CMakeLists.txt
product/commonhead/commonHead/common_file/: CMakeLists.txt
product/commonhead/commonHead/viewModels/: CMakeLists.txt
product/commonhead/commonHead/viewModelsLayer/: CMakeLists.txt
product/commonhead/common_head/: CMakeLists.txt
product/commonhead/common_head/CommonHeadFramework/: CMakeLists.txt
product/commonhead/common_head/CommonHeadManager/: CMakeLists.txt
product/commonhead/common_head/ViewModels/: CMakeLists.txt
product/commonhead/common_head/common_file/: CMakeLists.txt
product/commonhead/unit_test/catch2_tests/: CMakeLists.txt
product/framework/: CMakeLists.txt
product/framework/DataWarehouse/: CMakeLists.txt
product/framework/DataWarehouse/src/: DataWarehouse.cpp  DataWarehouse.h  DataWarehouseLogger.h  (+2 more)
product/framework/Services/: CMakeLists.txt
product/framework/Utilities/: CMakeLists.txt
product/framework/agents/: CMakeLists.txt
product/framework/infrastructure/: CMakeLists.txt
product/framework/services/: CMakeLists.txt
product/framework/utilities/: CMakeLists.txt  FSM.h
product/framework/version/: CMakeLists.txt  product_info.json
product/toolframework/: CMakeLists.txt
product/toolframework/CMakeScripts/: BuildInstall.cmake  BuildInterface.cmake  BuildService.cmake  BuildUtilities.cmake
product/toolframework/Services/: CMakeLists.txt
product/toolframework/Utilities/: CMakeLists.txt
product/tools/proxy_addon/: build_addon_linux.sh  build_addon_windows.bat  proxy_addon.py  requirements.txt
product/windows/: CMakeLists.txt  main.cpp  main.qml
product/windows/common_define/: winLogger.h
product/windows/mylib/: CMakeLists.txt
(+2571 files in other folders)
