if (WIN32)
    set(ADD_SERVICE_DEFINITIONS SERVICE_DLL SERVICE_LIB)
endif()
add_subdirectory(ServiceCommonFile)
add_subdirectory(ServiceDeclaration)
add_subdirectory(CoreFramework)
add_subdirectory(DataWarehouseService)
add_subdirectory(NetworkService)
add_subdirectory(ImageService)
add_subdirectory(ContactService)
add_subdirectory(CommonSettingService)
add_subdirectory(unit_test)