if (WIN32)
    set(ADD_SERVICE_DEFINITIONS SERVICE_DLL) #SERVICE_DLL SERVICE_LIB
else()
    set(ADD_SERVICE_DEFINITIONS)
endif()
add_subdirectory(ServiceExportMacro)
add_subdirectory(ServiceDeclaration)
add_subdirectory(CoreFramework)
add_subdirectory(InvocationService)
add_subdirectory(ClientInfoService)
add_subdirectory(DataWarehouseService)
add_subdirectory(NetworkService)
add_subdirectory(ImageService)
add_subdirectory(ContactService)
add_subdirectory(MediaService)
add_subdirectory(StabilityService)
add_subdirectory(PerformanceService)
add_subdirectory(ServiceFactory)