if (WIN32)
    set(ADD_UTILITIES_DEFINITIONS Utilities_DLL) #Utilities_DLL Utilities_LIB
else()
    set(ADD_UTILITIES_DEFINITIONS)
endif()

add_subdirectory(common_file)
add_subdirectory(NotificationHelper)
add_subdirectory(TimeUtils)
add_subdirectory(UUIDUtils)
add_subdirectory(StringUtils)
add_subdirectory(NetworkUtils)
add_subdirectory(DatabaseUtils)
add_subdirectory(OSUtils)
add_subdirectory(FilePathUtils)