if (WIN32)
    set(ADD_UTILITIES_DEFINITIONS Utilities_DLL) #Utilities_DLL Utilities_LIB
else()
    set(ADD_UTILITIES_DEFINITIONS)
endif()

add_subdirectory(common_file)
add_subdirectory(LoggerUtils)
add_subdirectory(NotificationHelper)
add_subdirectory(TimeUtils)
add_subdirectory(UUIDUtils)
add_subdirectory(StringUtils)
add_subdirectory(OSUtils)
add_subdirectory(SystemUtils)
add_subdirectory(FilePathUtils)
add_subdirectory(QRCodeUtils)
add_subdirectory(ThreadPoolUtils)
add_subdirectory(CompressionUtils)
add_subdirectory(ArchiveUtils)
add_subdirectory(Base64Utils)
add_subdirectory(StateMachineUtils)
add_subdirectory(JsonUtils)
add_subdirectory(ProcessBridgeUtils)
add_subdirectory(TcpChannelUtils)
add_subdirectory(ImageProcessUtils)
add_subdirectory(ScreenCaptureUtils)
add_subdirectory(ScreenRecordingUtils)
