include(BuildQtModule)
if (WIN32)
    set(ADD_DEFINITIONS AppUI_DLL) #AppUI_DLL AppUI_LIB
else()
    set(ADD_DEFINITIONS)
endif()

set(MODULE_MODULE_NAME UIView)
set(MODULE_IDE_FOLDER UI/UIView)

set(MODULE_HEADER_BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

# Source files, public headers, QML files and per-submodule include dirs are aggregated by the subdirectories below.
set(MODULE_HEADER_FILES "")
set(MODULE_SOURCE_PRIVATE "")
set(MODULE_QML_TARGET_FILES "")
set(MODULE_PRIVATE_INCLUDE_DIRS "")

add_subdirectory(UIViewCommon)
add_subdirectory(UIEvents)
add_subdirectory(MainWindowSuite)
add_subdirectory(PageViews)
add_subdirectory(AppUpgrade)
add_subdirectory(MediaCameraView)
add_subdirectory(AppUIManager)

set(MODULE_DEPENDENCIES_PUBLIC
)
set(MODULE_DEPENDENCIES_PRIVATE
    UIPlatformUtils
    UIIPCChannel
    UTComponent
    UTComposite
    AppContext
    UIResourceAssetRCCInterface #for asset resource
    UIResourcecTranslation #for translation
    UIManager
    ViewModels
    CommonHeadFramework
    ResourceLoader
    Qt6::Gui Qt6::Quick Qt6::Widgets Qt6::Multimedia Qt6::Network
)

if(WIN32)
    list(APPEND MODULE_DEPENDENCIES_PRIVATE crypt32)
endif()

set(MODULE_BUILD_INTERFACE_DIR
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/AppUIManager/include
)
set(MODULE_INSTALL_INTERFACE_DIR include)
set(MODULE_BUILD_PRIVATE_DIR include)

set(MODULE_QML_TARGET_URI
    ${MODULE_MODULE_NAME}
)

BuildQtModule(
MODULE_NAME ${MODULE_MODULE_NAME}
TARGET_SOURCE_PRIVATE ${MODULE_SOURCE_PRIVATE}
TARGET_SOURCE_HEADER_BASE_DIR ${MODULE_HEADER_BASE_DIR}
TARGET_SOURCE_PUBLIC_HEADER ${MODULE_HEADER_FILES}
TARGET_ADD_LINK_LIBRARY_PRIVATE ${MODULE_DEPENDENCIES_PRIVATE}
TARGET_ADD_LINK_LIBRARY_PUBLIC ${MODULE_DEPENDENCIES_PUBLIC}
TARGET_INCLUDE_DIRECTORIES_BUILD_INTERFACE  ${MODULE_BUILD_INTERFACE_DIR}
TARGET_INCLUDE_DIRECTORIES_INSTALL_INTERFACE ${MODULE_INSTALL_INTERFACE_DIR}
TARGET_INCLUDE_DIRECTORIES_PRIVATE ${MODULE_BUILD_PRIVATE_DIR} ${MODULE_PRIVATE_INCLUDE_DIRS}
TARGET_DEFINITIONS ${ADD_DEFINITIONS}
IDE_FOLDER ${MODULE_IDE_FOLDER}
QML_TARGET_URI ${MODULE_QML_TARGET_URI}
QML_TARGET_FILES ${MODULE_QML_TARGET_FILES}
)
